<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="base_amount_hint">e.g. 88.66</string>
    <string name="base_amount_label">Enter the base amount:</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="custom_percent">Custom %:</string>
    <string name="tip_label">Tip is:</string>
    <string name="choose_tip_percentage">Click to choose a tip percentage</string>
    <string name="totalAmountLabel">Total is:</string>

</resources>
