<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.codepath.tipcalculator.TipActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/base_amount_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvBaseAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBaseAmount"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/base_amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn15pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10pc"
        android:layout_alignBottom="@+id/btn10pc"
        android:layout_toRightOf="@+id/btn10pc"
        android:onClick="calculateTip"
        android:text="@string/fifteen_percent" />

    <Button
        android:id="@+id/btn20pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15pc"
        android:layout_alignBottom="@+id/btn15pc"
        android:layout_toRightOf="@+id/btn15pc"
        android:onClick="calculateTip"
        android:text="@string/twenty_percent" />

    <Button
        android:id="@+id/btn10pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBaseAmount"
        android:layout_below="@+id/etBaseAmount"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:onClick="calculateTip"
        android:text="@string/ten_percent" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipLabel"
        android:layout_alignBottom="@+id/tvTipLabel"
        android:layout_alignRight="@+id/tvBaseAmountLabel"
        android:text="0.00"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn15pc"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="30dp"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>    
